modded features gets priority over vanilla features now

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.world.biome.Biome field_201874_aj #structures
 public net.minecraft.world.biome.Biome func_201866_a(Lnet/minecraft/entity/EntityClassification;Lnet/minecraft/world/biome/Biome$SpawnListEntry;)V #addSpawn
+public net.minecraft.world.biome.Biome field_201872_ah # features
