--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,5 @@
 public net.minecraft.world.biome.Biome field_201874_aj #structures
 public net.minecraft.world.biome.Biome func_201866_a(Lnet/minecraft/entity/EntityClassification;Lnet/minecraft/world/biome/Biome$SpawnListEntry;)V #addSpawn
 public net.minecraft.world.biome.Biome field_201872_ah # features
+public net.minecraft.world.biome.Biome field_201871_ag # carvers
+public net.minecraft.world.biome.Biome field_201880_ax # spawns
