--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,11 +2,11 @@ modLoader="javafml" #mandatory
 loaderVersion="[30,)" #mandatory
 
 [[mods]] #mandatory
-modId="all_the_features" #mandatory
-logoFile=""
+modId="world_blender" #mandatory
+logoFile="world_blender_logo.png"
 version="${version}" #mandatory
-displayName="All The Features" #mandatory
-displayURL=""
+displayName="World Blender" #mandatory
+displayURL="https://www.curseforge.com/minecraft/mc-mods/worldblender"
 authors="TelepathicGrunt"
 credits="Special thanks to all the Forge tutorials and debugging help from other modders to help make this mod possible!"
-description='''Av'''
+description='''A dimension with all the features, structures, surfaces, and natural spawns from vanilla and your mods shoved in!'''
