--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
     maven {
         url "https://maven.tterrag.com/"
     }
+//	flatDir {
+//		dirs 'deps'
+//	}
 }
 
 version = '1.15.2-1.0.0'
@@ -81,6 +84,7 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.15.2-31.1.1'
+	//runtimeOnly fg.deobf("ignored:modname-1.15.2:x.x.x")
 }
 
 // Process resources on build
