--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,9 @@ public net.minecraft.world.biome.Biome func_201866_a(Lnet/minecraft/entity/Entit
 public net.minecraft.world.biome.Biome field_201872_ah # features
 public net.minecraft.world.biome.Biome field_201871_ag # carvers
 public net.minecraft.world.biome.Biome field_201880_ax # spawns
+
+public net.minecraft.world.WorldType func_151358_j()Lnet/minecraft/world/WorldType; #enableInfoNotice 
+
+public net.minecraft.server.dedicated.PropertyManager field_73672_b # serverProperties
+public-f net.minecraft.server.dedicated.ServerProperties field_219023_q # worldType
+
