attempting to make cool portal effects

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,3 +9,6 @@ public net.minecraft.world.WorldType func_151358_j()Lnet/minecraft/world/WorldTy
 public net.minecraft.server.dedicated.PropertyManager field_73672_b # serverProperties
 public-f net.minecraft.server.dedicated.ServerProperties field_219023_q # worldType
 
+public net.minecraft.client.renderer.RenderState field_228515_g_ # TRANSLUCENT_TRANSPARENCY
+public net.minecraft.client.renderer.RenderState field_228511_c_ # ADDITIVE_TRANSPARENCY
+public net.minecraft.client.renderer.RenderState field_228503_M_ # BLACK_FOG
