attempting to add enderdragon option

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,3 +12,5 @@ public-f net.minecraft.server.dedicated.ServerProperties field_219023_q # worldT
 public net.minecraft.client.renderer.RenderState field_228515_g_ # TRANSLUCENT_TRANSPARENCY
 public net.minecraft.client.renderer.RenderState field_228511_c_ # ADDITIVE_TRANSPARENCY
 public net.minecraft.client.renderer.RenderState field_228503_M_ # BLACK_FOG
+
+public-f net.minecraft.world.dimension.EndDimension field_186064_g # dragonFightManager
