worked on fixing dragon manager to track fight correctly and beginning maping change

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,3 +14,4 @@ public net.minecraft.client.renderer.RenderState field_228511_c_ # ADDITIVE_TRAN
 public net.minecraft.client.renderer.RenderState field_228503_M_ # BLACK_FOG
 
 public-f net.minecraft.world.dimension.EndDimension field_186064_g # dragonFightManager
+#public net.minecraft.entity.LivingEntity func_70609_aI()V #onDeathUpdate
