--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ archivesBaseName = 'world_blender'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200123-mixed-1.15.2'
+    mappings channel: 'snapshot', version: '20200304-1.15.1'
     
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -83,7 +83,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.1'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.1.18'
 	//runtimeOnly fg.deobf("ignored:modname-1.15.2:x.x.x")
 	//runtimeOnly fg.deobf("ignored:dimdungeons-1.0.4")
 }
