--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,5 +13,5 @@ public net.minecraft.client.renderer.RenderState field_228515_g_ # TRANSLUCENT_T
 public net.minecraft.client.renderer.RenderState field_228511_c_ # ADDITIVE_TRANSPARENCY
 public net.minecraft.client.renderer.RenderState field_228503_M_ # BLACK_FOG
 
-public-f net.minecraft.world.dimension.EndDimension field_186064_g # dragonFightManager
-#public net.minecraft.entity.LivingEntity func_70609_aI()V #onDeathUpdate
+public-f net.minecraft.world.dimension.EndDimension field_186064_g #dragonFightManager
+public net.minecraft.entity.boss.dragon.EnderDragonEntity func_184668_a(I)V #dropExperience
