--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ repositories {
     maven {
         url "https://maven.tterrag.com/"
     }
-//	flatDir {
-//		dirs 'deps'
-//	}
+	flatDir {
+		dirs 'deps'
+	}
 }
 
 version = '1.15.2-1.2.0'
@@ -84,8 +84,7 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.15.2-31.1.18'
-	//runtimeOnly fg.deobf("ignored:modname-1.15.2:x.x.x")
-	//runtimeOnly fg.deobf("ignored:dimdungeons-1.0.4")
+	runtimeOnly fg.deobf("ignored:terraforged-1.15.2:0.0.1")
 }
 
 // Process resources on build
