still not working.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,3 +15,5 @@ public net.minecraft.client.renderer.RenderState field_228503_M_ # BLACK_FOG
 
 public-f net.minecraft.world.dimension.EndDimension field_186064_g #dragonFightManager
 public net.minecraft.entity.boss.dragon.EnderDragonEntity func_184668_a(I)V #dropExperience
+
+public net.minecraft.world.gen.carver.WorldCarver field_222718_j # carvableBlocks
