--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 	}
 }
 
-version = '1.15.2-1.3.4'
+version = '1.15.2-1.3.5'
 group = 'net.telepathicgrunt.worldblender' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'world_blender'
 
@@ -84,6 +84,7 @@ dependencies {
     
 	implementation fg.deobf("com.terraforged:terraforged-1.15.2:0.0.9")
 	runtimeOnly fg.deobf("ignored:dimdungeons:1.0.4")
+	runtimeOnly fg.deobf("ignored:worleycaves-1.15.2:1.6.0")
 	
 	//runtimeOnly fg.deobf("ignored:modname-1.15.2:x.x.x")
 }
