fixed waterlogged DD, fixed blacklisting DD, and added feature to add obsidian to separate water and lava

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -17,3 +17,6 @@ public-f net.minecraft.world.dimension.EndDimension field_186064_g #dragonFightM
 public net.minecraft.entity.boss.dragon.EnderDragonEntity func_184668_a(I)V #dropExperience
 
 public net.minecraft.world.gen.carver.WorldCarver field_222718_j # carvableBlocks
+
+#For making structure templates not inherit fluids when replacing world.
+public net.minecraft.world.gen.feature.template.PlacementSettings field_204765_h # field_204765_h
