--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,3 +10,8 @@ displayURL="https://www.curseforge.com/minecraft/mc-mods/worldblender"
 authors="TelepathicGrunt"
 credits="Special thanks to all the Forge tutorials and debugging help from other modders to help make this mod possible!"
 description='''A dimension with all the features, structures, surfaces, and natural spawns from vanilla and your mods shoved in!'''
+
+[[dependencies.world_blender]]
+    modId="terraforged"
+    mandatory=false
+    versionRange="[0.1.2,)"
