--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,6 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=2.0.7
 modid=world_blender
-mc_version=1.16.3
-forge_version=34.1.35
-mapping=20200820
-mcp_version=1.16.1
+mc_version=1.16.4
+forge_version=35.0.2
+mappings_version=20201028-1.16.3
